Project

General

Profile

Actions

Bug #12111

closed

syseventd: cast between incompatible function types

Added by Toomas Soome over 3 years ago. Updated over 3 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
cmd - userland programs
Start date:
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

Build errors with gcc 8:

    sysevent_conf_mod.c:2210:36: error: cast between incompatible function types from 'void (*)()' to 'void * (*)(void *)' [-Werror=cast-function-type]
      if ((err = thr_create(NULL, NULL, (void *(*)(void*))queue_flush_thr,
                                        ^
    syseventd.c:468:29: error: cast between incompatible function types from 'void (*)()' to 'void * (*)(void *)' [-Werror=cast-function-type]
      if (thr_create(NULL, NULL, (void *(*)(void *))sigwait_thr,
                                 ^
    syseventd.c: In function 'load_modules':
    syseventd.c:1332:7: error: cast between incompatible function types from 'void (*)(void *)' to 'void * (*)(void *)' [-Werror=cast-function-type]
           (void *(*)(void *))client_deliver_event_thr,
           ^
    devfsadmd_mod.c: In function 'slm_init':
    devfsadmd_mod.c:336:29: error: cast between incompatible function types from 'void (*)()' to 'void * (*)(void *)' [-Werror=cast-function-type]
      if (thr_create(NULL, NULL, (void *(*)(void *))devfsadmd_deliver_thr,
                                 ^
    sysevent_reg_mod.c:235:29: error: cast between incompatible function types from 'void (*)()' to 'void * (*)(void *)' [-Werror=cast-function-type]
      if (thr_create(NULL, NULL, (void *(*)(void *))subscriber_deliver_thr,
                                 ^
    cc1: all warnings being treated as errors

Testing done: build/install/boot

Actions #1

Updated by Toomas Soome over 3 years ago

  • Description updated (diff)
Actions #2

Updated by Electric Monk over 3 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit 5b784b07fc13e535c4af29e1804b0c6fa58889bf

commit  5b784b07fc13e535c4af29e1804b0c6fa58889bf
Author: Toomas Soome <tsoome@me.com>
Date:   2019-12-27T17:10:09.000Z

    12111 syseventd: cast between incompatible function types
    Reviewed by: Matthias Scheler <mscheler@tintri.com>
    Reviewed by: Andy Fiddaman <andy@omniosce.org>
    Approved by: Robert Mustacchi <rm@fingolfin.org>

Actions

Also available in: Atom PDF