12111 syseventd: cast between incompatible function types Reviewed by: Matthias Scheler <mscheler@tintri.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Robert Mustacchi <rm@fingolfin.org>